# gavagai

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
data/annotations/: 0001.json  0002.json  sample.json
docs/: annotation_format.md  roadmap.md
papers/: vision.md
scripts/: annotate_sample.py  create_annotation.py
src/gavagai/: dataset.py  model.py  parser.py  train.py
